--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sequelize": "^3.19.3",
     "string-format": "^0.5.0",
     "stringformat": "^0.0.5",
-    "tedious": "^1.13.2"
+    "tedious": "^1.13.2",
+    "toposort": "^1.0.0"
   },
   "scripts": {
     "debug": "node debug app.js",
